option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
option(
    'root_user_mgmt',
    type: 'feature',
    description: 'Enable management of the root user',
    value: 'enabled',
)

option('MAX_PASSWORD_LENGTH',
    type: 'integer',
    value: 64,
    description: 'Least Max password Length',
)
