option('tests', type: 'feature', description: 'Build tests', value: 'enabled')

option('ldap', type: 'feature', description: 'Enable LDAP support')

option(
    'root_user_mgmt',
    type: 'feature',
    description: 'Enable management of the root user',
    value: 'enabled',
)

option(
    'MAX_PASSWORD_LENGTH',
    type: 'integer',
    value: 64,
    description: 'Max password Length default value as per NIST guideline recommendation',
)

option(
    'credential_bootstrapping_enable_after_reset',
    type: 'feature',
    description: 'Enable Credential bootstrapping after reset service or host',
    value: 'enabled',
)
